# Scheduler

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp
Core/: Calendar.cpp  Definitions.h  IDGenerator.cpp  IDGenerator.h  PriorityQueue.cpp  PriorityQueue.h  Project.cpp  Project.h  Tag.cpp  Tag.h  TagManager.cpp  TagManager.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  Timeslot.h
Core/Calendar/: Calendar.cpp  Calendar.h  CalendarGenerator.cpp  CalendarGenerator.h  Definitions.h  Tag.h  Timeslot.cpp  Timeslot.h  TimeslotRule.cpp  TimeslotRule.h
Core/Tasks/: IDGenerator.cpp  IDGenerator.h  PriorityQueue.cpp  Project.cpp  Project.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  TaskRule.cpp  TaskRule.h
UI/: MainFrame.cpp  MainFrame.h  Menubar.cpp  Menubar.h  ProjectDialog.cpp  ProjectDialog.h  ProjectPanel.cpp  ProjectPanel.h  TagPanel.cpp  TagPanel.h  TaskFrame.cpp  TaskFrame.h  TaskRuleDialog.cpp  TaskRuleDialog.h  TimeslotDialog.cpp  TimeslotDialog.h  TimeslotFrame.cpp  TimeslotFrame.h  Timetable.cpp  Timetable.h  consoleUI.cpp  consoleUI.h  schedulerApp.cpp  schedulerApp.h  taskWindow.cpp  taskWindow.h  wxDefs.h
